--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,7 +8,7 @@ html
     // Bootstrap
     link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
     link(href='/stylesheets/style.css', rel='stylesheet')
-    link(href='/font-awesome/css/font-awesome.min.css', rel='stylesheet')
+    link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
     link(href='http://fonts.googleapis.com/css?family=Signika+Negative', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='stylesheets/animate.min.css')
   body
@@ -30,7 +30,7 @@ html
             li
               a(href='#projects') PROJECTS
             li
-              a(href='#contact') CONTACT 
+              a(href='#connect') CONNECT 
        
     // SLIDER
     section#slider.text-center
