--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,13 +3,12 @@ html
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags
     title iamikhide
     // Bootstrap
     link(href='/stylesheets/bootstrap.min.css', rel='stylesheet')
     link(href='/stylesheets/style.css', rel='stylesheet')
     link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css', rel='stylesheet')
-    link(href='http://fonts.googleapis.com/css?family=Signika+Negative', rel='stylesheet', type='text/css')
+    link(href='https://fonts.google.com/?selection.family=Josefin+Slab', rel='stylesheet', type='text/css')
     link(rel='stylesheet', href='stylesheets/animate.min.css')
   body
     article.navbar.navbar-default.navbar-fixed-top(role='navigation')
